# fluxopt_yaml

./: .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yaml  pr-title.yaml  publish.yaml  release.yaml
dev/: 404.html  index.html  objects.inv
dev/search/: search_index.json
dev/stylesheets/: extra.css
docs/: api.md  guide.md  index.md
src/fluxopt_yaml/: __init__.py  loader.py
tests/: test_loader.py
